[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage = "https://github.com/rust-nostr/nostr"
repository = "https://github.com/rust-nostr/nostr.git"
license = "MIT"
rust-version = "1.70.0"

[workspace.dependencies]
async-utility = "0.3"
async-wsocket = "0.13"
atomic-destructor = { version = "0.3", default-features = false }
js-sys = "0.3"
lru = { version = "0.13", default-features = false }
negentropy = { version = "0.5", default-features = false }
negentropy-deprecated = { package = "negentropy", version = "0.3", default-features = false }
nostr = { version = "0.41", path = "./crates/nostr", default-features = false }
nostr-connect = { version = "0.41", path = "./crates/nostr-connect", default-features = false }
nostr-database = { version = "0.41", path = "./crates/nostr-database", default-features = false }
nostr-indexeddb = { version = "0.41", path = "./crates/nostr-indexeddb", default-features = false }
nostr-lmdb = { version = "0.41", path = "./crates/nostr-lmdb", default-features = false }
nostr-ndb = { version = "0.41", path = "./crates/nostr-ndb", default-features = false }
nostr-relay-builder = { version = "0.41", path = "./crates/nostr-relay-builder", default-features = false }
nostr-relay-pool = { version = "0.41", path = "./crates/nostr-relay-pool", default-features = false }
nostr-sdk = { version = "0.41", path = "./crates/nostr-sdk", default-features = false }
serde_json = { version = "1.0", default-features = false }
tokio = { version = ">=1.37", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
