[workspace]
members = [
    "crates/*",

    # Nostr Database
    "database/nostr-database",
    "database/nostr-indexeddb",
    "database/nostr-lmdb",
    "database/nostr-ndb",

    # Nostr MLS
    "mls/nostr-mls",
    "mls/nostr-mls-memory-storage",
    "mls/nostr-mls-sqlite-storage",
    "mls/nostr-mls-storage",

    # Remote File Storage implementations
    "rfs/nostr-blossom",
    "rfs/nostr-http-file-storage",

    # Signers
    "signer/nostr-android-signer",
    "signer/nostr-browser-signer",
    "signer/nostr-connect",
]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage = "https://github.com/rust-nostr/nostr"
repository = "https://github.com/rust-nostr/nostr.git"
license = "MIT"
rust-version = "1.70.0"

[workspace.dependencies]
async-utility = "0.3"
async-wsocket = "0.13"
atomic-destructor = { version = "0.3", default-features = false }
base64 = { version = "0.22", default-features = false }
clap = "=4.4.18"
lru = { version = "0.14", default-features = false }
negentropy = { version = "0.5", default-features = false }
nostr = { version = "0.42", path = "./crates/nostr", default-features = false }
nostr-connect = { version = "0.42", path = "./signer/nostr-connect", default-features = false }
nostr-database = { version = "0.42", path = "./database/nostr-database", default-features = false }
nostr-indexeddb = { version = "0.42", path = "./database/nostr-indexeddb", default-features = false }
nostr-lmdb = { version = "0.42", path = "./database/nostr-lmdb", default-features = false }
nostr-mls-memory-storage = { version = "0.42", path = "./mls/nostr-mls-memory-storage", default-features = false }
nostr-mls-sqlite-storage = { version = "0.42", path = "./mls/nostr-mls-sqlite-storage", default-features = false }
nostr-mls-storage = { version = "0.42", path = "./mls/nostr-mls-storage", default-features = false }
nostr-mls = { version = "0.42", path = "./mls/nostr-mls", default-features = false }
nostr-ndb = { version = "0.42", path = "./database/nostr-ndb", default-features = false }
nostr-relay-builder = { version = "0.42", path = "./crates/nostr-relay-builder", default-features = false }
nostr-relay-pool = { version = "0.42", path = "./crates/nostr-relay-pool", default-features = false }
nostr-sdk = { version = "0.42", path = "./crates/nostr-sdk", default-features = false }
once_cell = "1.21"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tempfile = "3.20"
tokio = { version = ">=1.37", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
