[workspace]
members = [
    "crates/*",

    # Nostr Database
    "database/nostr-database",
    "database/nostr-indexeddb",
    "database/nostr-lmdb",
    "database/nostr-ndb",

    # Remote File Storage implementations
    "rfs/nostr-blossom",
    "rfs/nostr-http-file-storage",

    # Signers
    "signer/nostr-browser-signer",
    "signer/nostr-browser-signer-proxy",
    "signer/nostr-connect",
]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage = "https://github.com/rust-nostr/nostr"
repository = "https://github.com/rust-nostr/nostr.git"
license = "MIT"
rust-version = "1.70.0"

[workspace.dependencies]
async-utility = "0.3"
async-wsocket = "0.13"
atomic-destructor = { version = "0.3", default-features = false }
base64 = { version = "0.22", default-features = false }
clap = "=4.4.18"
hex = { version = "0.4", default-features = false }
lru = { version = "0.16", default-features = false }
negentropy = { version = "0.5", default-features = false }
nostr = { version = "0.43", path = "./crates/nostr", default-features = false }
nostr-connect = { version = "0.43", path = "./signer/nostr-connect", default-features = false }
nostr-database = { version = "0.43", path = "./database/nostr-database", default-features = false }
nostr-lmdb = { version = "0.43", path = "./database/nostr-lmdb", default-features = false }
nostr-ndb = { version = "0.43", path = "./database/nostr-ndb", default-features = false }
nostr-relay-builder = { version = "0.43", path = "./crates/nostr-relay-builder", default-features = false }
nostr-relay-pool = { version = "0.43", path = "./crates/nostr-relay-pool", default-features = false }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tempfile = "3.20"
tokio = { version = ">=1.37", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
