[package]
name = "nostr-sdk"
version = "0.44.1"
edition = "2021"
description = "A full-featured SDK for building high-performance and reliable nostr applications."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "sdk"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-utility.workspace = true
async-wsocket = { workspace = true, features = ["socks"] }
futures = "0.3"
hex = { workspace = true, features = ["std"] }
lru.workspace = true
negentropy = { workspace = true, features = ["std"] }
nostr = { workspace = true, features = ["std", "rand", "os-rng"] }
nostr-database.workspace = true
nostr-gossip.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true, features = ["std"] }
universal-time = { workspace = true, features = ["std"] }

[dev-dependencies]
nostr = { workspace = true, features = ["all-nips"] }
nostr-connect.workspace = true
nostr-lmdb.workspace = true
nostr-ndb.workspace = true
nostr-memory.workspace = true
nostr-gossip-memory.workspace = true
nostr-relay-builder.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "aggregated-query"

[[example]]
name = "blacklist"

[[example]]
name = "client"

[[example]]
name = "comment"

[[example]]
name = "fetch-events"

[[example]]
name = "gossip"

[[example]]
name = "monitor"

[[example]]
name = "nostr-connect"

[[example]]
name = "bot"

[[example]]
name = "nostrdb"

[[example]]
name = "stream-events"

[[example]]
name = "subscriptions"

[[example]]
name = "tor"

[[example]]
name = "lmdb"

[[example]]
name = "whitelist"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }
