[package]
name = "nostr-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nostr_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
nostr = { workspace = true, features = ["std", "blocking", "all-nips"] }
uniffi.workspace = true

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
