[package]
name = "nostr-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nostr_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
async-trait.workspace = true
nostr = { workspace = true, features = ["std", "all-nips"] }
uniffi = { workspace = true, features = ["tokio"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
