[package]
name = "nostr-js"
version = "0.1.0"
edition = "2021"
description = "Nostr protocol implementation, for JavaScript"
authors.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys.workspace = true
nostr = { workspace = true, features = ["std", "all-nips"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
