[package]
name = "nostr-js"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
nostr = { path = "../../crates/nostr", features = ["std", "all-nips"] }
wasm-bindgen = { version = "0.2", features = ["std"] }
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
