[package]
version = "0.0.0"
edition = "2021"
name = "nostr-nodejs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
napi = { version = "2.11", default-features = false, features = ["async", "napi4", "napi6"] }
napi-derive = "2.11"
nostr = { path = "../../crates/nostr" }

[build-dependencies]
napi-build = "2.0"
