[package]
name = "nostr-sdk-c"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
nostr-sdk = { workspace = true, features = ["all-nips"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true

[build-dependencies]
cbindgen = "0.27"
