[package]
name = "nostr-sdk-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nostr_sdk_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = ["lmdb"]
lmdb = ["nostr-sdk/lmdb"]
ndb = ["nostr-sdk/ndb"]
uniffi-cli = ["uniffi/cli"] # required for the `uniffi-bindgen` binary

[dependencies]
async-trait.workspace = true
nostr = { workspace = true, features = ["std", "all-nips"] }
nostr-connect.workspace = true
nostr-sdk  = { workspace = true, default-features = false, features = ["all-nips", "tor"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true
uniffi = { git = "https://github.com/yukibtc/uniffi-rs", rev = "4f98679df9ae2a98effba3b274ff48379041d6d7", features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

[dev-dependencies]
uniffi = { git = "https://github.com/yukibtc/uniffi-rs", rev = "4f98679df9ae2a98effba3b274ff48379041d6d7", features = ["bindgen-tests"] }
