[package]
name = "nostr-sdk-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nostr_sdk_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = ["lmdb"]
lmdb = ["nostr-sdk/lmdb"]
ndb = ["nostr-sdk/ndb"]
uniffi-cli = ["uniffi/cli"] # required for the `uniffi-bindgen` binary

[dependencies]
async-trait.workspace = true
nostr = { workspace = true, features = ["std", "all-nips"] }
nostr-connect.workspace = true
nostr-sdk  = { workspace = true, default-features = false, features = ["all-nips"] }
nwc.workspace = true
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "cd38ccea8236df7d93aff336c325a3a8e524af5d", features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

[dev-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "cd38ccea8236df7d93aff336c325a3a8e524af5d", features = ["bindgen-tests"] }
