[package]
name = "nostr-sdk-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nostr_sdk_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = ["lmdb"]
tor = ["nostr-connect/tor", "nostr-sdk/tor", "nwc/tor"]
lmdb = ["nostr-sdk/lmdb"]
ndb = ["nostr-sdk/ndb"]
uniffi-cli = ["uniffi/cli"] # required for the `uniffi-bindgen` binary

[dependencies]
async-trait = "0.1"
nostr = { workspace = true, features = ["std", "all-nips"] }
nostr-connect.workspace = true
nostr-sdk  = { workspace = true, default-features = false, features = ["all-nips"] }
nwc.workspace = true
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true
uniffi = { git = "https://github.com/yukibtc/uniffi-rs", rev = "a6c2f678b43c15df6969ba5f50aa76523e3f3f79", features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

#[dev-dependencies]
#uniffi = { git = "https://github.com/yukibtc/uniffi-rs", rev = "a6c2f678b43c15df6969ba5f50aa76523e3f3f79", features = ["bindgen-tests"] }
