[package]
name = "nostr-sdk-js"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys.workspace = true
nostr-connect.workspace = true
nostr-redb.workspace = true
nostr-sdk = { workspace = true, default-features = false, features = ["all-nips", "indexeddb"] }
nwc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasm-bindgen = { workspace = true, features = ["std"] }
wasm-bindgen-futures.workspace = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
