[package]
version = "0.0.0"
edition = "2021"
name = "nostr-sdk-nodejs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.10", default-features = false, features = ["async", "napi4"] }
napi-derive = "2.10"
nostr-nodejs = { path = "../nostr-nodejs" }
nostr-sdk = { path = "../../crates/nostr-sdk" }

[build-dependencies]
napi-build = "2.0"
