[package]
version = "0.0.0"
edition = "2021"
name = "nostr-sdk-nodejs"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.10"
napi = { version = "2.11", default-features = false, features = ["async", "napi4"] }
napi-derive = "2.11"
nostr-nodejs = { path = "../nostr-nodejs" }
nostr-sdk = { path = "../../crates/nostr-sdk", features = ["sqlite"] }

[build-dependencies]
napi-build = "2.0"
