[package]
name = "ensure_no_std"
version = "0.7.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
libc = { version = "0.2.119", default-features = false }

nostr = { path = "../nostr", default-features = false, features = ["alloc"] }
url_no_std = { package = "url", features = [
    "idna",
    "alloc",
    "core-error",
    "core-net",
], path = "../../../rust-url/url", default-features = false }