[package]
name = "nostr-cli"
version = "0.36.0"
edition = "2021"
description = "Nostr CLI"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["nostr", "cli"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
dirs = "5.0"
indicatif = "0.17"
nostr-connect.workspace = true
nostr-relay-builder.workspace = true
nostr-sdk = { workspace = true, features = ["all-nips", "lmdb", "tor"] }
once_cell.workspace = true
prettytable-rs = "0.10"
regex = "1.11.1"
rustyline = { version = "14.0", default-features = false, features = ["with-file-history"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
