[package]
name = "nostr-cli"
version = "0.42.0"
edition = "2021"
description = "Nostr CLI"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["nostr", "cli"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
indicatif = "0.17"
nostr-connect.workspace = true
nostr-relay-builder.workspace = true
nostr-sdk = { workspace = true, features = ["all-nips", "lmdb", "tor"] }
once_cell = { version = "1.21", default-features = false }
prettytable-rs = "0.10"
regex = "1.11.1"
rustyline = { version = "15.0", default-features = false, features = ["with-file-history"] }
tokio = { workspace = true, features = ["full"] }
