[package]
name = "nostr-database"
version = "0.39.0"
edition = "2021"
description = "Database for Nostr apps"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "database"]

[features]
default = []
flatbuf = ["dep:flatbuffers"]

[dependencies]
flatbuffers = { version = "23.5", optional = true }
nostr = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
