[package]
name = "nostr-database"
version = "0.42.0"
edition = "2021"
description = "Events database abstraction and in-memory implementation"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "database"]

[features]
default = []
flatbuf = ["dep:flatbuffers"]

[dependencies]
flatbuffers = { version = "23.5", optional = true }
lru.workspace = true
nostr = { workspace = true, features = ["std"] }
rustversion.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
