[package]
name = "nostr-gossip"
version = "0.39.0"
edition = "2021"
description = "Gossip storage for nostr apps"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "gossip"]

[dependencies]
async-utility.workspace = true
lru.workspace = true
nostr = { workspace = true, features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
