[package]
name = "nostr-indexeddb"
version = "0.1.0"
edition = "2021"
description = "Web's IndexedDB Storage backend for Nostr apps"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "database", "indexeddb"]

[dependencies]
async-trait = { workspace = true }
indexed_db_futures = "0.4"
nostr = { workspace = true, features = ["std"] }
nostr-database = { workspace = true, features = ["flatbuf"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["std", "attributes"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
