[package]
name = "nostr-indexeddb"
version = "0.37.0"
edition = "2021"
description = "Web's IndexedDB Storage backend for Nostr apps"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "database", "indexeddb"]

[dependencies]
async-trait.workspace = true
indexed_db_futures = "0.5"
nostr = { workspace = true, features = ["std"] }
nostr-database = { workspace = true, features = ["flatbuf"] }
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen.workspace = true
