[package]
name = "nostr-keyring"
version = "0.43.0"
edition.workspace = true
description = "Keyring for nostr"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "keyring"]

[features]
default = []
# Enables async APIs
async = ["dep:async-utility"]

[dependencies]
async-utility = { workspace = true, optional = true }
keyring = { version = "3.6", features = ["apple-native", "linux-native", "linux-native-sync-persistent", "windows-native"] }
nostr = { workspace = true, features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "blocking"
